class Knife {
 public:
  void attack();
};