class Weapon {
 public:
  virtual void attack() = 0;
};